# CI-CD-practice

./: CMakeLists.txt  README.md
.github/workflows/: python-ci.yml
src/: main.cpp  printer.cpp  printer.h
tests copy/: test_printer.cpp
